styles and footer layout

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -97,10 +97,10 @@
 nav { background-color: #eee; }
 
 footer { margin-top: 50px; width: 100%; background-color: #eee; }
-.builtby { margin-left: 10px; margin-right: 10px; }
+.builtby { font-weight: bold; margin-left: 75px; }
 .poweredby { margin-left: 10px; }
-.copyright { margin-right: 10px; }
-.slogan { margin-left: 10px; margin-right: 10px; }
+.copyright { font-weight: bold; margin-right: 10px; }
+.slogan { font-weight: bold; margin-right: 75px; }
 
 .main { background-color: #ff0; left-margin: 10%; }
 
