cannot use class textarea for rich_textarea. breaks the layout

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,9 +20,9 @@
     </div>
   
     <div class="field">
-      <%= form.label :content %>
+      <%= form.label :content, class: "label" %>
     <div class="control">
-      <%= form.rich_textarea :content, class: "textarea" %>
+      <%= form.rich_textarea :content %>
     </div>
     </div>
   
@@ -57,7 +57,7 @@
   <div class="field">
     <%= form.label :content, class: "label" %>
     <div class="control">
-    <%= form.rich_textarea :content, class: "textarea" %>
+    <%= form.rich_textarea :content %>
   </div>
   </div>
   
@@ -92,7 +92,7 @@
   <div class="field">
     <%= form.label :content, class: "label" %>
     <div class="control">
-    <%= form.rich_textarea :content, class: "textarea" %>
+    <%= form.rich_textarea :content %>
   </div>
   </div>
   
