--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>fe9c3a6 (formatting forms with bulma, 2025-04-21)
+<h1>Changelog</h1><pre>edeb10c (cannot use class textarea for rich_textarea. breaks the layout, 2025-04-21)
+e643378 (styles and footer layout, 2025-04-21)
+fe9c3a6 (formatting forms with bulma, 2025-04-21)
 1a350ed (bulma migration, 2025-04-21)
 d10c24b (no need for separate partials folder; just use layouts; nav/footer bg color, 2025-04-07)
 670fcd6 (remove non-rich text field, 2025-04-07)
