--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,9 +3,9 @@
 <div>
   <% if Current.user %>
     <% if Current.user.id == @post.user_id %>
-      <%= link_to "Edit Post", edit_post_path(@post), method: :get %>
-      <%= link_to "Delete Post", @post, data: {turbo_method: :delete, turbo_confirm: "Confirm Deletion"} %>
+      <%= link_to "Edit", edit_post_path(@post), method: :get, class: "button is-link" %>
+      <%= link_to "Delete", @post, data: {turbo_method: :delete, turbo_confirm: "Confirm Deletion"}, class: "button is-danger" %>
     <% end %>
   <% end %>
-  <% if Current.user %><%= link_to "Comment on Post", new_post_comment_path(@post) %><% end %>
+  <% if Current.user %><%= link_to "Comment", new_post_comment_path(@post), class: "button is-primary" %><% end %>
 </div>
