--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>edeb10c (cannot use class textarea for rich_textarea. breaks the layout, 2025-04-21)
+<h1>Changelog</h1><pre>9467bf7 (formatting edit/delete/comment buttons, 2025-04-21)
+093de15 (changelog, 2025-04-21)
+edeb10c (cannot use class textarea for rich_textarea. breaks the layout, 2025-04-21)
 e643378 (styles and footer layout, 2025-04-21)
 fe9c3a6 (formatting forms with bulma, 2025-04-21)
 1a350ed (bulma migration, 2025-04-21)
