--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,15 @@
 
   <body>
     <div class="container is-fluid">
+     <header>
         <%= render 'layouts/navbar' %>
+     </header>
         <%= tag.div(flash[:alert], style: "color:red") if flash[:alert] %>
         <%= tag.div(flash[:message], style: "color:orange") if flash[:message] %>
         <%= tag.div(flash[:notice], style: "color:green") if flash[:notice] %>
+        <div class="content">
         <%= yield %>
+        </div>
         <%= render 'layouts/footer' %>
     </div>
   </body>
