setting up for email confirmation

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,7 @@
-<h1>Changelog</h1><pre>9467bf7 (formatting edit/delete/comment buttons, 2025-04-21)
+<h1>Changelog</h1><pre>961e658 (cleaner layout for diversions, 2025-04-25)
+2485722 (removed extra divs which caused layout issues, 2025-04-25)
+fe2e981 (temporarily disable bulma dark mode, 2025-04-25)
+9467bf7 (formatting edit/delete/comment buttons, 2025-04-21)
 093de15 (changelog, 2025-04-21)
 edeb10c (cannot use class textarea for rich_textarea. breaks the layout, 2025-04-21)
 e643378 (styles and footer layout, 2025-04-21)
