rearrange footer items

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,7 +12,8 @@
       : <%= link_to "Changelog", page_path('changelog')%>
       : <%= link_to "Terms", page_path('terms') %>
       : <%= link_to "Privacy", page_path('privacy') %>
-      : <%= link_to "Source Code", 'https://github.com/smhauck/dvrsly', target: "_blank" %> & <%= link_to "License", page_path('license') %>
+      : <%= link_to "License", page_path('license') %>
+      : <%= link_to "Source Code", 'https://github.com/smhauck/dvrsly', target: "_blank" %> 
     </p>
     <p class="copyright">&copy; DVRSLY.com</p>
 <!--
