only show 250 chars in posts/index

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,10 @@
-<h1>Changelog</h1><pre>961e658 (cleaner layout for diversions, 2025-04-25)
+<h1>Changelog</h1><pre>8313daa (rearrange footer items, 2025-04-27)
+81d3d30 (new storage naming convention, 2025-04-26)
+5b490fe (enable logging, 2025-04-25)
+7dc00d1 (deploy to shared vps, 2025-04-25)
+85fee7e (various gem updates, 2025-04-25)
+379da9b (setting up for email confirmation, 2025-04-25)
+961e658 (cleaner layout for diversions, 2025-04-25)
 2485722 (removed extra divs which caused layout issues, 2025-04-25)
 fe2e981 (temporarily disable bulma dark mode, 2025-04-25)
 9467bf7 (formatting edit/delete/comment buttons, 2025-04-21)
