confirmation stuff/mailer

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>8313daa (rearrange footer items, 2025-04-27)
+<h1>Changelog</h1><pre>75cb121 (only show 250 chars in posts/index, 2025-04-27)
+8313daa (rearrange footer items, 2025-04-27)
 81d3d30 (new storage naming convention, 2025-04-26)
 5b490fe (enable logging, 2025-04-25)
 7dc00d1 (deploy to shared vps, 2025-04-25)
