--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -44,7 +44,7 @@
       </div>
       <% else %>
         <%= link_to "Sign In", new_session_path, class: "navbar-item" %>
-        <%# link_to "Sign Up", new_registration_path, class: "navbar-item" %>
+        <%= link_to "Sign Up", new_registration_path, class: "navbar-item" %>
       <% end %>
     </div>
   </div>
