updates to roadmap and faq

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -1,5 +1,18 @@
 <h1>Frequently Asked Questions</h1>
 
+<h2>Comments</h2>
+<p>Deleting comments works two ways</p>
+<ul>
+<li>If there are replies to a comment the comment's content is replaced by the words "Comment Deleted".</li>
+<li>If there are no replies to the comment the entire comment is simply removed.</li>
+</ul>
+
+<h2>Posts</h2>
+<p>Deleting posts works two ways</p>
+<ul>
+<li>If there are comments on the post the post's content is replaced by the words "Post Deleted".</li>
+<li>If there are no comments on the post the entire post is simply removed.</li>
+</ul>
 
 <h2>Usernames</h2>
 <ul>
