--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -4,6 +4,7 @@
   <li>User signs up on site. Site creates and send confirmation code to user's email. User clicks confirmation link in email. User account is confirmed and allowed to create content on the site.</li>
   <li>User: Delete Account</li>
   <li>User Profile Links</li>
+  <li>Search</li>
   <li>Infinite Scrolling</li>
   <li>Block User</li>
   <li>Automatic, scheduled backups</li>
@@ -19,10 +20,9 @@
   <li>Private Messages between Users</li>
   <li>User-defined list of blocked words in Private Messages. Example: a user does not like automobiles so any PM with the word "automobile" or "automobiles" will be blocked.</li>
   <li>Diversion Mods</li>
-  <li>User Flair by Community</li>
+  <li>User Flair by Diversion</li>
   <li>Dark Mode</li>
   <li>User Avatar</li>
-  <li>Blogs: Display post count</li>
   <li>Follow a Blog</li>
   <li>Follow / subscribe to Diversion</li>
   <li>Follow / subscribe to Post</li>
@@ -39,8 +39,8 @@
   <li>i18n / internationalization support.</li>
   <li>Moderation abilities.</li>
   <li>Public Moderation Logs.</li>
-  <li>Can pin posts to the top of communities.</li>
-  <li>Both site admins, and community moderators, who can appoint other moderators.</li>
+  <li>Can pin posts to the top of diversions.</li>
+  <li>Roles: users and admins, probably moderators too</li>
   <li>Can lock, remove, and restore posts and comments.</li>
   <li>Can ban and unban users from communities and the site.</li>
   <li>Can fully erase your data, replacing all posts and comments.</li>
@@ -72,4 +72,60 @@
   <li>Edit Posts</li>
   <li>Communities (Diversions)</li>
   <li>Posts in specific Diversions</li>
+</ol>
+
+<h2>Upcoming Development Features</h2>
 <ol>
+
+  <li>Blog Tests
+    <ol>
+      <li>Cannot save blog without title</li>
+      <li>Cannot save blog without creator</li>
+      <li>Users cannot edit other users' blog</li>
+      <li>Users cannot delete other users' blog</li>
+    </ol>
+  </li>
+
+  <li>Comment Tests
+    <ol>
+      <li>Cannot save comment without body</li>
+      <li>Cannot save comment author</li>
+      <li>Cannot delete comment with replies</li>
+      <li>Users cannot edit other users' comments</li>
+      <li>Users cannot delete other users' comments</li>
+    </ol>
+  </li>
+
+  <li>Diversion Tests
+    <ol>
+      <li>Cannot save diversion without title</li>
+      <li>Cannot save diversion without creator</li>
+      <li>Cannot delete diversion with posts</li>
+      <li>Cannot change diversion title once it has posts</li>
+    </ol>
+  </li>
+
+  <li>Post Tests
+    <ol>
+      <li>Cannot save post without title</li>
+      <li>Cannot save post without author</li>
+      <li>Cannot delete post with comments</li>
+      <li>Users cannot edit other users' posts</li>
+      <li>Users cannot delete other users' posts</li>
+    </ol>
+  </li>
+
+  <li>User Tests
+    <ol>
+      <li>Cannot create user without email_address</li>
+      <li>Users cannot edit other users' profile</li>
+      <li>Users cannot delete other users' profile</li>
+      <li>Users cannot login without being confirmed</li>
+    </ol>
+  </li>
+
+  <li> </li>
+  <li> </li>
+  <li> </li>
+</ol>
+
