--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,10 @@
-<h1>Changelog</h1><pre>75cb121 (only show 250 chars in posts/index, 2025-04-27)
+<h1>Changelog</h1><pre>988f249 (moving registration confirmation to a form, 2025-05-01)
+1b77045 (cleaner formatting, 2025-05-01)
+901db5a (updates to roadmap and faq, 2025-05-01)
+66a7ff9 (autocomplete email_address, 2025-05-01)
+23df0a1 (bulma styling, 2025-05-01)
+1d25e7e (confirmation stuff/mailer, 2025-04-28)
+75cb121 (only show 250 chars in posts/index, 2025-04-27)
 8313daa (rearrange footer items, 2025-04-27)
 81d3d30 (new storage naming convention, 2025-04-26)
 5b490fe (enable logging, 2025-04-25)
