getting bulma working, styling, themes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="content has-text-centered">
    <p> 
     <span class="slogan">Live Life Diversely</span>
-    <span class="builtby">Built by <%= link_to 'Shannon', 'https://github.com/smhauck', target: '_blank' %></span>
+    <span class="builtby"><%= link_to 'Built by Shannon', 'https://github.com/smhauck', target: '_blank' %></span>
     </p>
     <p>
       <%= link_to "About", about_path %>
@@ -16,9 +16,6 @@
       : <%= link_to "Source Code", 'https://github.com/smhauck/dvrsly', target: "_blank" %> 
     </p>
     <p class="copyright">&copy; DVRSLY.com</p>
-<!--
-    <p class="poweredby"><a href="https://www.digitalocean.com/?refcode=e263e59bd933&utm_campaign=Referral_Invite&utm_medium=Referral_Program&utm_source=badge"><img src="https://web-platforms.sfo2.cdn.digitaloceanspaces.com/WWW/Badge%203.svg" alt="DigitalOcean Referral Badge" /></a></p>
--->
   </div>
 </footer>
 
