--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -46,6 +46,25 @@
         <%= link_to "Sign In", new_session_path, class: "navbar-item" %>
         <%= link_to "Sign Up", new_registration_path, class: "navbar-item" %>
       <% end %>
+      <div class="navbar-item">
+
+
+
+
+
+<div class="navbar-item">
+	<select data-choose-theme class="focus:outline-none h-10 rounded-full px-3 border">
+		<option value="">Choose Theme</option>
+		<option value="light">Light</option>
+		<option value="dark">Dark</option>
+		<option value="hardboiled">Hardboiled</option>
+		<option value="unionred">Union Red</option>
+		<option value="pinkie">Pinkie</option>
+	</select>
+</div>
+
+
+
     </div>
   </div>
 </nav>
