--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>988f249 (moving registration confirmation to a form, 2025-05-01)
+<h1>Changelog</h1><pre>e08421b (v0.0.0, 2025-05-01)
+88a0c07 (updated bundle, 2025-05-01)
+988f249 (moving registration confirmation to a form, 2025-05-01)
 1b77045 (cleaner formatting, 2025-05-01)
 901db5a (updates to roadmap and faq, 2025-05-01)
 66a7ff9 (autocomplete email_address, 2025-05-01)
