--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -26,21 +26,164 @@
 // $input-shadow: none;
 
 // Import only what you need from Bulma
-//@import "bulma/sass/utilities/_all.sass";
-//@import "bulma/sass/base/_all.sass";
-//@import "bulma/sass/elements/button.sass";
-//@import "bulma/sass/elements/container.sass";
-//@import "bulma/sass/elements/title.sass";
-//@import "bulma/sass/form/_all.sass";
-//@import "bulma/sass/components/navbar.sass";
-//@import "bulma/sass/layout/hero.sass";
-//@import "bulma/sass/layout/section.sass";
+// @import "bulma/sass/utilities/_all.sass";
+// @import "bulma/sass/base/_all.sass";
+// @import "bulma/sass/elements/button.sass";
+// @import "bulma/sass/elements/container.sass";
+// @import "bulma/sass/elements/title.sass";
+// @import "bulma/sass/form/_all.sass";
+// @import "bulma/sass/components/navbar.sass";
+// @import "bulma/sass/layout/hero.sass";
+// @import "bulma/sass/layout/section.sass";
 
 @import 'bulma/bulma';
 
+// =======================================================
+@media (prefers-color-scheme: hardboiled) {
+  :root {
+   html { background-color: hsl(60,95%,45%); }
+   body { background-color: hsl(60,95%,45%); }
+   --bulma-body-background-color: hsl(60 95% 45%);
+  }
+  .navbar {
+    --bulma-navbar-h: 0;
+    --bulma-navbar-s: 100%;
+    --bulma-navbar-item-color-l: 50%;
+    --bulma-navbar-item-selected-l: 5%;
+    --bulma-navbar-item-selected-background-l: 63%;
+    --bulma-navbar-background-color: hsl(60,95%,45%);
+
+  }
+  .footer {
+    --bulma-footer-background-color: hsl(60 95% 45%);
+    --bulma-footer-color: hsl(0 360% 50%);
+  }
+}
+
+
+// =======================================================
+[data-theme=hardboiled],
+.theme-harboiled {
+
+   html { background-color: hsl(60,95%,45%); }
+   body { background-color: hsl(60,95%,45%); }
+   --bulma-body-background-color: hsl(60 95% 45%);
+  .navbar {
+    --bulma-navbar-h: 0;
+    --bulma-navbar-s: 100%;
+    --bulma-navbar-item-color-l: 50%;
+    --bulma-navbar-item-selected-l: 5%;
+    --bulma-navbar-item-selected-background-l: 63%;
+    --bulma-navbar-background-color: hsl(60,95%,45%);
+
+  }
+  .footer {
+    --bulma-footer-background-color: hsl(60 95% 45%);
+    --bulma-footer-color: hsl(0 360% 50%);
+  }
+}
+
+// =======================================================
+[data-theme=pinkie],
+.theme-pinkie {
+
+   html { background-color: hsla(320 100% 80% / 0.5); color: #000; }
+   body { background-color: hsla(320 100% 80% / 0.5); color: #000; }
+   
+   a:link, a:visited { color: hsl(320 100% 45%); }
+   a:hover { color: #fff; }
+
+   --bulma-body-background-color: hsla(320 100% 80% / 0.5);
+   .box {
+    --bulma-box-background-color: hsla(320 100% 80% / 0.5);
+    --bulma-box-color: #000;
+   }
+   .content {
+     --bulma-box-background-color: hsla(320 100% 80% / 0.5);
+   }
+  .navbar {
+    --bulma-navbar-h: 360;
+    --bulma-navbar-s: 100%;
+    --bulma-navbar-item-color-l: 100%;
+    --bulma-navbar-item-selected-l: 5%;
+    --bulma-navbar-item-selected-background-l: 63%;
+    --bulma-navbar-background-color: hsl(320,100%,45%);
+  }
+  trix-editor {
+    background-color: #fff;
+  }
+  .footer {
+    --bulma-footer-background-color: hsla(320 100% 80% / 0.0);
+    // --bulma-footer-color: hsla(320 100% 80% / 0.5);
+  }
+  .slogan { color: #000; font-weight: 900; margin-right: 75px; }
+}
+
+// =======================================================
+@media (prefers-color-scheme: pinkie) {
+  :root {
+    html { background-color: hsla(320 100% 45% / 0.5) }
+    body { background-color: hsla(320 100% 45% / 0.5) }
+    --bulma-body-background-color: hsla(320 100% 45% / 0.5)
+    a:link, a:hover, a:visited { color: #f00; }
+  }
+  .navbar {
+    --bulma-navbar-h: 360;
+    --bulma-navbar-s: 100%;
+    --bulma-navbar-item-color-l: 100%;
+    --bulma-navbar-item-selected-l: 5%;
+    --bulma-navbar-item-selected-background-l: 63%;
+    --bulma-navbar-background-color: hsl(320,100%,45%);
+
+  }
+  .footer {
+    --bulma-footer-background-color: hsl(60 95% 45%);
+    --bulma-footer-color: hsl(0 360% 50%);
+  }
+  .slogan { color: #f00; font-weight: 900; margin-right: 75px; }
+}
+
+// =======================================================
+[data-theme=unionred],
+.theme-unionred {
+  color: #f00;
+  a:link, a:hover, a:visited { color: #f00; }
+
+  // --bulma-body-background-color: hsl(360 100% 90%);
+  .navbar {
+    --bulma-navbar-h: 0;
+    --bulma-navbar-s: 100%;
+    --bulma-navbar-item-color-l: 50%;
+    --bulma-navbar-item-selected-l: 5%;
+    --bulma-navbar-item-selected-background-l: 63%;
+  }
+  .footer {
+    --bulma-footer-background-color: hsl(0 100% 100%);
+  }
+  .slogan { color: #f00; font-weight: 900; margin-right: 75px; }
+}
+
+// =======================================================
+@media (prefers-color-scheme: unionred) {
+  :root {
+    // --bulma-body-background-color: hsl(50 100% 50%);
+  }
+  .navbar {
+    --bulma-navbar-h: 0;
+    --bulma-navbar-s: 100%;
+    --bulma-navbar-item-color-l: 50%;
+    --bulma-navbar-item-selected-l: 5%;
+    --bulma-navbar-item-selected-background-l: 63%;
+  }
+  .footer {
+    --bulma-footer-background-color: hsl(0 100% 100%);
+  }
+  .slogan { color: #f00; font-weight: 900; margin-right: 75px; }
+}
 
 
 
+// =======================================================
 .blog {
   & .post { }
   & .post-author { font-size: 1em; padding-left: 5px; }
@@ -61,16 +204,11 @@
   & .post-content { font-size: 1em; padding-left: 5px; }
 }
 
-
 .comment { }
 .comment-author { font-size: 1em; padding-left: 5px; }
 .comment-content { font-size: 1em; padding-left: 5px; }
 
-nav { background-color: #eee; }
-
-footer { margin-top: 50px; width: 100%; background-color: #eee; }
-.slogan { font-weight: bold; margin-right: 75px; }
-.builtby { font-weight: bold; margin-left: 75px; }
+.builtby { font-weight: 900; margin-left: 75px; }
 .poweredby { margin-left: 10px; }
 .copyright { font-weight: bold; margin-right: 10px; }
 
