--- a/app/views/blogs/_blog.html.erb
+++ b/app/views/blogs/_blog.html.erb
@@ -7,7 +7,7 @@
   <p class="blog-description"><%= blog.description %></p>
 
   <% if @posts.present? %>
-    <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+    <%== pagy_bulma_nav(@pagy) if @pagy.pages > 1 %>
     <% @posts.each do |post| %>
       <div id="<%= dom_id post %>" class="post">
         <p>
