--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -5,7 +5,7 @@
 <% end %>
 <p style="color: green"><%= notice %></p>
 
-<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<%== pagy_bulma_nav(@pagy) if @pagy.pages > 1 %>
 <div id="blogs">
   <% @blogs.each do |blog| %>
     <div id="<%= dom_id blog %>" class="blog box">
