--- a/app/views/diversions/_diversion.html.erb
+++ b/app/views/diversions/_diversion.html.erb
@@ -5,7 +5,7 @@
   <p class="diversion-description"><%= simple_format(diversion.description) %></p>
 
   <% if @posts.present? %>
-    <%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+    <%== pagy_bulma_nav(@pagy) if @pagy.pages > 1 %>
     <% @posts.each do |post| %>
       <p>
         <span class="post-title"><%= link_to "p/" + post.title, post %></span>
