--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <% else %>
   <% content_for :title, "Posts" %>
 <% end %>
-<%== pagy_bootstrap_nav(@pagy) if @pagy.pages > 1 %>
+<%== pagy_bulma_nav(@pagy) if @pagy.pages > 1 %>
 <div id="posts">
   <% @posts.each do |post| %>
     <div id="<%= dom_id post %>" class="box post">
