--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>0c68775 (getting bulma working, styling, themes, 2025-05-02)
+<h1>Changelog</h1><pre>f7463a1 (changelog update, 2025-05-02)
+0c68775 (getting bulma working, styling, themes, 2025-05-02)
 e08421b (v0.0.0, 2025-05-01)
 88a0c07 (updated bundle, 2025-05-01)
 988f249 (moving registration confirmation to a form, 2025-05-01)
