--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -55,11 +55,12 @@
 <div class="navbar-item">
 	<select data-choose-theme class="focus:outline-none h-10 rounded-full px-3 border">
 		<option value="">Choose Theme</option>
-		<option value="light">Light</option>
-		<option value="dark">Dark</option>
-		<option value="hardboiled">Hardboiled</option>
-		<option value="unionred">Union Red</option>
 		<option value="pinkie">Pinkie</option>
+		<option value="hardboiled">Hardboiled</option>
+		<option value="unionreddark">Union Red(Dark)</option>
+		<option value="unionredlight">Union Red(Light)</option>
+		<option value="dark">Dark</option>
+		<option value="light">Light</option>
 	</select>
 </div>
 
