--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,6 @@
-<h1>Changelog</h1><pre>f7463a1 (changelog update, 2025-05-02)
+<h1>Changelog</h1><pre>ed8ea0f (unionreddark / unionredlight working, 2025-05-03)
+80570db (minor touch-up to the Pinkie theme, 2025-05-02)
+f7463a1 (changelog update, 2025-05-02)
 0c68775 (getting bulma working, styling, themes, 2025-05-02)
 e08421b (v0.0.0, 2025-05-01)
 88a0c07 (updated bundle, 2025-05-01)
