--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>ed8ea0f (unionreddark / unionredlight working, 2025-05-03)
+<h1>Changelog</h1><pre>ce3a28d (hardboiled theme mostly setup, 2025-05-03)
+ed8ea0f (unionreddark / unionredlight working, 2025-05-03)
 80570db (minor touch-up to the Pinkie theme, 2025-05-02)
 f7463a1 (changelog update, 2025-05-02)
 0c68775 (getting bulma working, styling, themes, 2025-05-02)
