--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -70,8 +70,8 @@
   .navbar {
     --bulma-navbar-background-color: hsl(60 95% 45%);
     --bulma-navbar-h: 0;
-    --bulma-navbar-s: 100%;
-    --bulma-navbar-item-color-l: 50%;
+    --bulma-navbar-s: 0%;
+    --bulma-navbar-item-color-l: 0%;
     --bulma-navbar-item-selected-l: 5%;
     --bulma-navbar-item-selected-background-l: 63%;
   }
@@ -116,10 +116,13 @@
     --bulma-navbar-h: 360;
     --bulma-navbar-s: 100%;
     --bulma-navbar-item-color-l: 100%;
-    --bulma-navbar-item-selected-l: 5%;
+//    --bulma-navbar-item-selected-l: 5%;
     --bulma-navbar-item-selected-background-l: 63%;
     --bulma-navbar-background-color: hsl(320 100% 45%);
   }
+
+  .navbar a:link, a:visited { color: hsl(360 100% 100%); }
+  .navbar a:hover { color: hsl(0 0% 0%); }
 
   .navbar-brand .navbar-item { color: #fff; }
 
