--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>d35f256 (cleaning themes, 2025-05-03)
+<h1>Changelog</h1><pre>55f4821 (theme adjustments, 2025-05-03)
+d35f256 (cleaning themes, 2025-05-03)
 481471a (cleaning up formatting, 2025-05-03)
 ce3a28d (hardboiled theme mostly setup, 2025-05-03)
 ed8ea0f (unionreddark / unionredlight working, 2025-05-03)
