--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,8 @@
-<h1>Changelog</h1><pre>5970eb3 (hardboiled: red menu text to black text, 2025-05-03)
+<h1>Changelog</h1><pre>49174b6 (create user and confirm email through forgot password email and link, 2025-05-08)
+72d4e1f (sendmail for prod. increase logging level, 2025-05-08)
+6e67cdf (additional notes, 2025-05-08)
+1d480e4 (pink links in the body of the page, 2025-05-04)
+5970eb3 (hardboiled: red menu text to black text, 2025-05-03)
 55f4821 (theme adjustments, 2025-05-03)
 d35f256 (cleaning themes, 2025-05-03)
 481471a (cleaning up formatting, 2025-05-03)
