--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>49174b6 (create user and confirm email through forgot password email and link, 2025-05-08)
+<h1>Changelog</h1><pre>f4f8edc (changelog, 2025-05-08)
+49174b6 (create user and confirm email through forgot password email and link, 2025-05-08)
 72d4e1f (sendmail for prod. increase logging level, 2025-05-08)
 6e67cdf (additional notes, 2025-05-08)
 1d480e4 (pink links in the body of the page, 2025-05-04)
