localhost to hosts file

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,9 @@
-<h1>Changelog</h1><pre>a2f09b6 (menu item background color pinkie theme, 2025-05-08)
+<h1>Changelog</h1><pre>a8d4020 (bundle update, 2025-05-12)
+926ee69 (figuring out sendmail v3, 2025-05-08)
+4b3422b (figuring out sendmail v2, 2025-05-08)
+d54cdbf (figuring out sendmail v1, 2025-05-08)
+188246b (add sendmail to dockerfile, 2025-05-08)
+a2f09b6 (menu item background color pinkie theme, 2025-05-08)
 f4f8edc (changelog, 2025-05-08)
 49174b6 (create user and confirm email through forgot password email and link, 2025-05-08)
 72d4e1f (sendmail for prod. increase logging level, 2025-05-08)
