--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,10 @@
-<h1>Changelog</h1><pre>a8d4020 (bundle update, 2025-05-12)
+<h1>Changelog</h1><pre>9faa616 (email setup v10, 2025-05-13)
+730bc85 (figuring out sendmail v7, 2025-05-12)
+69b6f34 (figuring out sendmail v6, 2025-05-12)
+8b140b5 (figuring out sendmail v5, 2025-05-12)
+55bf658 (figuring out sendmail v4, 2025-05-12)
+f727e8d (localhost to hosts file, 2025-05-12)
+a8d4020 (bundle update, 2025-05-12)
 926ee69 (figuring out sendmail v3, 2025-05-08)
 4b3422b (figuring out sendmail v2, 2025-05-08)
 d54cdbf (figuring out sendmail v1, 2025-05-08)
