--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,12 @@
-<h1>Changelog</h1><pre>9faa616 (email setup v10, 2025-05-13)
+<h1>Changelog</h1><pre>42e1dd7 (email setup v18, 2025-05-15)
+2f8e02f (email setup v17, 2025-05-13)
+4ad7efe (email setup v16, 2025-05-13)
+923c306 (email setup v15, 2025-05-13)
+78daa9c (email setup v14, 2025-05-13)
+e960348 (email setup v13, 2025-05-13)
+c121d2c (email setup v12, 2025-05-13)
+b2cb9d9 (email setup v11, 2025-05-13)
+9faa616 (email setup v10, 2025-05-13)
 730bc85 (figuring out sendmail v7, 2025-05-12)
 69b6f34 (figuring out sendmail v6, 2025-05-12)
 8b140b5 (figuring out sendmail v5, 2025-05-12)
