dark mode available

--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>d80f64c (sendgrid, 2025-05-23)
+<h1>Changelog</h1><pre>101a908 (sendgrid part 2, 2025-05-23)
+d80f64c (sendgrid, 2025-05-23)
 42e1dd7 (email setup v18, 2025-05-15)
 2f8e02f (email setup v17, 2025-05-13)
 4ad7efe (email setup v16, 2025-05-13)
