--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>e770922 (bundle update, 2025-05-25)
+<h1>Changelog</h1><pre>94520f3 (yarn upgrade trix, 2025-05-25)
+e770922 (bundle update, 2025-05-25)
 b9d6086 (dark mode available, 2025-05-25)
 101a908 (sendgrid part 2, 2025-05-23)
 d80f64c (sendgrid, 2025-05-23)
