faq: account deletion, username changes

--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -14,6 +14,17 @@
 <li>If there are no comments on the post the entire post is simply removed.</li>
 </ul>
 
+<h2>Users</h2>
+<ul>
+  <li>Account Deletion
+    <ul>
+      <li>If you have never created any content or have deleted all your content you can immediately delete your account.</li>
+      <li>If you have content in your account (Blogs, Posts, or Comments), your account will be frozen for 30 days. During that time you can log in and cancel the account deletion. If you do not cancel the deletion all of your content including Blogs, Posts, Comments, User Profile will be permanently deleted. There is no recovery from this deletion.</li>
+    </ul> 
+  </li>
+  <li>Account Abandonment: Problem for the future.</li>
+</ul>
+
 <h2>Usernames</h2>
 <ul>
   <li>Maximum username length is 25 characters</li>
@@ -21,6 +32,6 @@
   <li>Not case-sensitive: JohnDoe and jOHNdOE are considered the same name.</li>
   <li>No spaces ( ). Spaces will be replaced with underscores (_)</li>
   <li>No usernames that are vulgar, profane, or based on hate groups or terrorist organizations.</li>
-  <li></li>
+  <li>You can edit your username any time you wish. NOTE that if you change your username someone else can change their username to your old username.</li>
   <li></li>
 </ul>
