--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -1,8 +1,7 @@
 <h1>Roadmap</h1>
 <h2>Upcoming Features (in approximate order)</h2>
 <ol>
-  <li>User signs up on site. Site creates and send confirmation code to user's email. User clicks confirmation link in email. User account is confirmed and allowed to create content on the site.</li>
-  <li>User: Delete Account</li>
+  <li>User: Delete Account that has content</li>
   <li>User Profile Links</li>
   <li>Search</li>
   <li>Infinite Scrolling</li>
@@ -53,7 +52,9 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>User: Delete Account that does not have content</li>
   <li>Dark Mode</li>
+  <li>User signs up on site. Site sends password reset email to user's email. User clicks link in email. User creates their password and can then login.</li>
   <li>A post can consist of a title and any combination of self text or a URL.</li>
   <li>Manual database backups</li>
   <li>Rich Text Editor</li>
